<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="com.bizmolimited.bizapp.MapsActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/content_map" />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_stat_img"
                app:backgroundTint="@color/ocean"
                app:fabSize="normal" />

        </FrameLayout>
        <FrameLayout
            android:fitsSystemWindows="true"
            android:id="@+id/container_map"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab1"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_play"/>
        </FrameLayout>


        <android.support.design.widget.NavigationView
            android:id="@+id/navview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/add_offer_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_nav_add_job"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/show_offer_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_nav_see_job"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_nav_help"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_nav_configuration"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_legal_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/change_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_nav_change"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/exit_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/menu_nav_exit"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/manu_nav_legal"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>



</android.support.design.widget.CoordinatorLayout>




