<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/backLoginPhone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:text=" "
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/label_pass_login"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lpass"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_pass_login"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="260dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/lost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/lost_pass"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/ocean" />

                <Button
                    android:id="@+id/newAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/create_account"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/ocean" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/wainting"
        android:visibility="invisible"
        android:background="@drawable/back_waiting"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="110dp"
        android:minWidth="110dp" />

</RelativeLayout>