<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/backLogin"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:background="@color/transparent"
            android:text=" "/>

        <TextView
            android:id="@+id/textintroregcod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:padding="5dp">


            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/cod1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_cod1"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/cod2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_cod2"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/cod3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_cod3"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/cod4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_cod4"
                    android:imeOptions="actionGo"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/wainting1"
        android:visibility="invisible"
        android:background="@drawable/back_waiting"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="90dp"
        android:minWidth="90dp" />

</RelativeLayout>