<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ocean"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/img_init"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/layoutPhone"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/White"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/success_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/labelentrylogin"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/flagcountry"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp" />

                <!--
                <TextView
                    android:id="@+id/codePhone"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp" /> -->

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Ingrese su email"
                        android:maxLines="1"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_rrss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@color/transparent"
                android:text="@string/label_btn_rrss"
                android:textColor="@color/com_facebook_blue"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:text="El dispotivo desde el cual se esta ejecutando Bizmobiz no es compatible."
                android:textSize="25sp" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>